flask_src/static/stylesheet/base.css
html {
    font-family: "Dejavu Serif", "Times New Roman", Arial, sans-serif, serif;
    font-size: 20px;
}

body, #navbar {
    background-image: linear-gradient(to bottom right, rgb(240, 244, 250), rgb(180, 199, 231));
}

a:link, a:visited, a:hover, a:focus, a:active {
    color: blue;
    text-decoration: none;
}

#navbar {
    top: 0;
    position: sticky;
    z-index: 1000;
    text-align: center;
}

#navbar > a {padding: 10px;}

#content {
    margin-top: 10px;
    padding: 10px;
}

.button {
    display: inline-block;
    color: black;
    border: 1px solid #90b2df;
    padding: 4px;
    text-align: center;
    vertical-align: middle;
    overflow: hidden;
    white-space: nowrap;
    text-decoration: none;
    cursor: pointer;
    user-select: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -khtml-user-select: none
}
.button:hover {
    background-image: linear-gradient(to bottom right, rgb(240, 244, 250), rgb(180, 199, 231));
    animation-name: button-animation;
    animation-duration: 1s;
    -webkit-animation-name: button-animation;
    -webkit-animation-duration: 1s;
}

@-webkit-keyframes button-animation {
    0% {opacity: 0.5;}
    100% {opacity: 1;}
}
@keyframes button-animation {
    0% {opacity: 0.5;}
    100% {opacity: 1;}
}

#footer {
    text-align: center;
}

.collapsible__toggle_link:link {
    text-decoration: none;
    color: black;
}
.collapsible__title {
    font-weight: bold;
}

